--- a/public/client/index.html
+++ b/public/client/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<title>Typescript Express App ...</title>
 	<link rel="icon" href="favicon.png"/>
-	<link rel="stylesheet" type="text/css" href="stylesheets/style.css"/>
+	<link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
 <body>
 	<div class="container center">
