--- a/public/client/index.html
+++ b/public/client/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="utf-8">
+	<meta charset="utf-8"/>
 	<title>Typescript Express App ...</title>
 	<link rel="icon" href="favicon.png"/>
 	<link rel="stylesheet" type="text/css" href="style.css"/>
